--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -473,9 +473,11 @@ Example Usage:
 
 * `viewEntry`
 
-=== Sorting : `sortExpense`, `sortIncome`, `sortBudget`, `sortWish`
+=== Sorting : `sortExpense`, `sortIncome`, `sortBudget`, `sortWish`, `sortAutoExp`
 Sorts the aforementioned list currently displayed according to sort type which can be `amount`, `time`, `description`,
 `tags` and `category`, and sort sequence which can be in `ascending`, `descending` order.
+
+[NOTE] Sorting of Budget by Amount refers to the original Budget Total Amount.
 
 Format: `sortExpense typ/<sort type> s/<sort sequence>`
 
@@ -499,7 +501,7 @@ Other Examples:
 * `sortExpense typ/category s/descending`
 * `sortIncome typ/category s/ascending`
 
-=== Find : `findExpense`, `findIncome`, `findWish`, `findBudget`
+=== Find : `findExpense`, `findIncome`, `findWish`, `findBudget`, `findAutoExp`
 
 Find income/expenditure by Category, Description, Amount, Date or Tags. There must be at least one find parameter.
 
