--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -151,7 +151,7 @@ Example: +
 Suppose you have already created an activity with Alice, Bob and Carl in it. +
 `activity t/Holiday Trip p/Alice p/Bob p/Carl`
 
-And you have friends that wants to join an activity midway.
+And you have friends that want to join an activity midway.
 
 To invite:
 
@@ -166,12 +166,12 @@ image::InviteOutput.png[]
 NOTE: *The `invite` command only invites to current viewed activity.* +
 if there is no current viewed activity, there will be an error. +
  +
-*The `invite` command only invites contact that exist in the contact list.* +
+*The `invite` command only invites contact that exists in the contact list.* +
 If the specified contact does not exist in the contact list, then the contact cannot be added and a warning message will be shown. +
  +
 *Multiple contacts can be invited at once.* +
  +
-*Contacts that already exist in activity cannot be invited again.*
+*Contact that already exists in activity cannot be invited again.*
 // end::invite[]
 
 // tag::disinvite[]
@@ -181,7 +181,7 @@ This command disinvites the contacts specified from the current viewed activity.
 Format: `disinvite p/PERSON ...`
 
 Example: +
-Suppose you have an activity with the same participants but with an expense shared by Alice, Bob and John
+Suppose you have an activity with the same participants but with an expense shared by Alice, Bob and Carl
 
 image::DisinviteExample.png[]
 
@@ -200,12 +200,12 @@ image::DisinviteOutput.png[]
 NOTE: *The `disinvite` command only disinvites from current viewed activity.* +
 if there is no current viewed activity, there will be an error. +
  +
-*The `disinvite` command only disinvites contact that exist in the activity.* +
+*The `disinvite` command only disinvites contact that exists in the activity.* +
 If the specified contact does not exist in the activity, then a warning message will be shown. +
  +
 *Multiple contacts can be disinvited at once.* +
  +
-*Contacts that involve in expenses cannot be disinvited.* +
+*Contact that involves in any expense cannot be disinvited.* +
 If a contact is involved in any expense, he cannot be disinvited.
 // end::disinvite[]
 
@@ -330,7 +330,7 @@ Deletes the contact/activity/expense at the specified index from the current dis
 
 Format: `delete INDEX`
 
-If current display is listing contacts e.g. `list c/`, the contact at that specified `INDEX` will be deleted if he/she is not involved in any activities.
+If current display is listing contacts e.g. `list c/`, the contact at that specified `INDEX` will be deleted if he/she is not involved in any activity.
 
 If current display is listing activities e.g. `list a/`, the activity at that specified `INDEX` will be deleted.
 
